# snyk-code-review-exercise

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.txt  pyproject.toml
.circleci/: config.yml
.github/: CODEOWNERS
api/: api.go  api_test.go
api/packagehandler/: handler.go
api/testdata/: react-16.13.0.json
conan_profiles/: gcc_17_linux  gcc_linux_x86_64  gcc_mac_arm
internal/dependencyresolver/: service.go  service_test.go
internal/models/: package_client_response.go  package_version.go
internal/npmpackageclient/: client.go  client_test.go
src/: main.cc  model.cc  model.h  npm.cc  npm.h  util.cc  util.h
tests/: test_package.py  test_versioned_package.cc
