[tool.poetry]
name = "snyk-code-review-exercise"
version = "1.0.0"
description = ""
authors = ["Snyk"]
license = "MIT"
readme = "README.md"
packages = [{include = "snyk_code_review_exercise"}]

[tool.poetry.dependencies]
python = "^3.10"
node-semver = "^0.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
